fixed homepage spacing

--- a/@latest/src/pages/HomePage.css
+++ b/@latest/src/pages/HomePage.css
@@ -18,12 +18,20 @@ h4 {
     font-size: 18px;
 }
 
+/* .homepage {
+    display: flex;
+    flex-direction: row;
+    /* padding-left: 20%; */
+    /* border: solid 1px;
+    border-color: aqua;
+
+} */ 
+
 .homepage-container {
     display: flex;
     flex-direction: column;
     padding: 50px;
     gap: 30px;
-    /* margin-left: auto; */
     
 }
 
@@ -36,37 +44,25 @@ h4 {
     justify-content: space-between;
     gap: 30px;
     height: 200px;
-
-
-    /* border: solid 1px; */
 }
 
 .homepage-header {
     display: flex;
     flex-direction: row;
     gap: 30px;
-
-    /* border: solid 1px; */
-    
 }
 
 .homepage-title {
     display: flex;
     flex-direction: column;
-    width: 800px;
+    width: 200%;
     gap: 0;
-    /* border: solid 1px; */
-    /* border-color: red; */
 }
 
 .homepage-streak-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
-
-    /* border-color: blue; */
-    /* border: solid 1px; */
-
 }
 
 .homepage-workout-container {
@@ -78,44 +74,29 @@ h4 {
     background-color: lightgray;
     border-radius: 30px;
     width: 1000px;
-
-
 }
 
 .homepage-workout-header-container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-
-    /* border: solid 1px;
-    border-color: blueviolet; */
 }
 
 .homepage-workout-complete-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
-    /* border: solid 1px;
-    border-color: brown; */
 }
 
 .homepage-exercises-container {
     display: flex;
     flex-direction: column;
-
-
-    /* border: solid 1px;
-    border-color: aquamarine; */
 }
 
 .homepage-checkbox {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    /* border: solid 1px;
-    border-color: black; */
-    
 }
 
 .homepage-exercise-container {
@@ -127,7 +108,6 @@ h4 {
     padding: 20px;
     height: 15px;
     border-radius: 10px;
-    
 }
 
 .homepage-exercise-list-container {
